# freebox-tools

./: .gitignore  README.md  pyproject.toml
freebox_tools/: client.py
freebox_tools/api/: freebox_api.py
freebox_tools/cmd/: contact.py  dhcp.py  fw.py  profile.py  storage.py  vm.py  vpn.py
